Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,14 @@ stages:
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
-        python run.py
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
+    
+    - script: |
+        python run.py
+      workingDirectory: $(projectRoot)
+      displayName: "Activate run.py"
+
 
     - task: ArchiveFiles@2
       displayName: 'Archive files'
