--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,10 +47,12 @@ stages:
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
     
-    - script: |
-        python run.py
-      workingDirectory: $(projectRoot)
-      displayName: "Activate run.py"
+    - task: PythonScript@0
+      inputs:
+        scriptSource: 'filePath'
+        scriptPath: $(Build.SourcesDirectory)/run.py
+    - bash: python $(Build.SourcesDirectory)/run.py
+    - script: python $(Build.SourcesDirectory)/run.py
 
 
     - task: ArchiveFiles@2
