--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ stages:
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
-        flask run
+
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
       
@@ -87,3 +87,5 @@ stages:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+
+              startUpCommand: gunicorn --bind=0.0.0.0 --timeout 600 run:app
