--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-FLASK_ENV='development'
+FLASK_ENV='testing'
 DEV_DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/Xcelerator"
-TEST_DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/Xcelerator"
+TEST_DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/XceleratorTest"
 DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/Xcelerator"
 STATUS='N'
 ROUTE_ID=259632
