--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_ENV='testing'
+FLASK_ENV='production'
 DEV_DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/Xcelerator"
 TEST_DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/XceleratorTest"
 DATABASE_URL="mssql+pymssql://CDL_OrderCleanup:nyc!123xyz@172.24.32.210/Xcelerator"
