--- a/.env
+++ b/.env
@@ -22,5 +22,5 @@ DB_PASS='nyc!123xyz'
 USER_NAME = 'CDL_OrderCleanup'
 ADMINS='segun@broadviewtechnicalsolutions.com, muyiwa@broadviewtechnicalsolutions.com'
 SUPPORT='segun@broadviewtechnicalsolutions.com, oyesegun123@gmail.com'
-EMAIL='notifications@broadviewtechnicalsolutions.com'
-MAIL_PASS='BT3chN0t!fy'
+EMAIL='DRVcheckin@cdldelivers.com'
+MAIL_PASS='Kux46889'
