--- a/web.config
+++ b/web.config
@@ -2,7 +2,7 @@
 <configuration>
     <system.webServer>
         <handlers>
-            <add name="OrderCleanupHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\CDL\CDL-OrderCleanup\cdl_ordercleanup\Scripts\python.exe|D:\CDL\CDL-OrderCleanup\cdl_ordercleanup\lib\site-packages\wfastcgi.py" resourceType="Unspecified" />
+            <add name="ordercleanup" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\CDL\CDL-OrderCleanup\cdl_ordercleanup\Scripts\python.exe|D:\CDL\CDL-OrderCleanup\cdl_ordercleanup\lib\site-packages\wfastcgi.py" resourceType="Unspecified" />
         </handlers>
     </system.webServer>
 </configuration>
